force-app/main/default/objects/Candidate_Application__c/Candidate_Application__c.object-meta.xml
<CustomObject>
    <label>Candidate Application</label>
    <nameField>
        <displayFormat>CA - {0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>