force-app/main/default/objects/Candidate_Application__c/fields/AI_Candidate_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Candidate_Score__c</fullName>
    <label>AI Candidate Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>