force-app/main/default/objects/Candidate_Application__c/fields/Job_Opening__c.field-meta.xml
<CustomField>
    <fullName>Job_Opening__c</fullName>
    <label>Job Opening</label>
    <referenceTo>Job_Opening__c</referenceTo>
    <relationshipLabel>Candidate Applications</relationshipLabel>
    <relationshipName>Candidate_Applications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>