force-app/main/default/objects/Candidate_Application__c/validationRules/AI_Candidate_Score_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AI_Candidate_Score_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AI_Candidate_Score__c &gt; 100</errorConditionFormula>
    <errorMessage>AI Candidate score cannot exceed 100</errorMessage>
</ValidationRule>