force-app/main/default/objects/Candidate_Application__c/validationRules/Offer_Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Offer_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Offer amount must be greater than zero</errorMessage>
</ValidationRule>